<resources>
    <string name="app_name">WeatherAppChallengeKt</string>
    <string name="feels_like">Feels like: </string>
    <string name="image">Image</string>
    <string name="degree">º</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temperature_unit">Temperature unit</string>
    <string name="celsius">º C</string>
    <string name="fahrenheit">º F</string>
    <string name="kelvin">º K</string>
    <string name="settings">Settings</string>
    <string name="locations">Locations</string>
    <string name="add_location">Add Location</string>
    <string name="enter_location_to_search">Enter location to search</string>
    <string name="confirm">Confirm</string>
    <string name="location">Location</string>
</resources>