<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".LocationFragment">

    <RelativeLayout
        android:id="@+id/location_header"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back"
            android:padding="5dp"
            android:contentDescription="@string/image"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/back_arrow"
            android:text="@string/locations"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:id="@+id/top_line"
        android:layout_below="@+id/location_header"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:alpha="0.2"
        android:background="@color/colorPrimary"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/location_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/location_header"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingBottom="40dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/new_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_location"
        app:cornerRadius="16dp"
        android:drawableEnd="@drawable/ic_add_loc"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />

</RelativeLayout>