<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SettingFragment">

    <RelativeLayout
        android:id="@+id/settings_header"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back"
            android:padding="5dp"
            android:contentDescription="@string/image"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/back_arrow"
            android:text="@string/settings"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>



    <View
        android:id="@+id/top_line"
        android:layout_below="@+id/settings_header"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:alpha="0.2"
        android:background="@color/colorPrimary"/>

    <RelativeLayout
        android:id="@+id/temp_container"
        android:layout_below="@+id/top_line"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature_unit"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/unit_label"
            android:layout_toStartOf="@id/end_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_centerVertical="true" />

        <ImageView
            android:id="@+id/end_arrow"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_forward"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:contentDescription="@string/image"/>


    </RelativeLayout>

    <View
        android:layout_below="@id/temp_container"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:alpha="0.2"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/colorPrimary"/>

</RelativeLayout>